test/fail/outer-request.grace
method name {
  Exception.raiseDefault
}

object {
  method name {}

  outer.name
}
